// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronPastBorrowingRequests tests should load the details component 1`] = `
<Overridable(Loader)
  isLoading={false}
>
  <Error
    FallbackComponent={[Function]}
    boundary={false}
    error={null}
    onUIError={null}
  >
    <ResultsTable
      columns={
        Array [
          Object {
            "formatter": [Function],
            "title": "Borrowing Request",
          },
          Object {
            "formatter": [Function],
            "title": "Loan",
          },
          Object {
            "formatter": [Function],
            "title": "Document",
          },
          Object {
            "formatter": [Function],
            "title": "Provider",
          },
          Object {
            "field": "created",
            "formatter": [Function],
            "title": "Created on",
          },
          Object {
            "field": "metadata.status",
            "title": "State",
          },
          Object {
            "field": "metadata.request_date",
            "formatter": [Function],
            "title": "Requested on",
          },
          Object {
            "field": "metadata.received_date",
            "formatter": [Function],
            "title": "Received on",
          },
        ]
      }
      currentPage={1}
      data={Array []}
      fixed={false}
      headerActionComponent={null}
      name="past borrowing requests"
      paginationComponent={null}
      renderEmptyResultsElement={null}
      seeAllComponent={
        <SeeAllButton
          disabled={false}
          fluid={false}
          to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
        />
      }
      showAllResults={false}
      showMaxRows={5}
      singleLine={true}
      subtitle=""
      title=""
      totalHitsCount={0}
    />
  </Error>
</Overridable(Loader)>
`;

exports[`PatronPastBorrowingRequests tests should render patron borrowing requests 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronPastBorrowingRequests
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-1",
                "patron_pid": "1",
                "pid": "illbid-1",
                "provider": Object {
                  "name": "Library 1",
                  "pid": "ill-provid-1",
                  "type": "LIBRARY",
                },
                "provider_pid": "ill-provid-1",
                "status": "PENDING",
                "type": "PHYSICAL_COPY",
              },
              "pid": "borrowing-request1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-2",
                "patron_pid": "2",
                "pid": "illbid-2",
                "provider": Object {
                  "name": "Library 2",
                  "pid": "ill-provid-2",
                  "type": "LIBRARY",
                },
                "provider_pid": "ill-provid-1",
                "status": "REQUESTED",
                "type": "DIGITAL",
              },
              "pid": "borrowing-request2",
            },
          ],
          "total": 2,
        }
      }
      error={null}
      fetchPatronPastBorrowingRequests={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      isLoading={false}
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxRequests={5}
    >
      <Overridable(Loader)
        isLoading={false}
      >
        <Loader
          isLoading={false}
        >
          <Overridable
            id="Loader.layout"
            isLoading={false}
          >
            <Error
              FallbackComponent={[Function]}
              boundary={false}
              error={null}
              onUIError={null}
            >
              <ResultsTable
                columns={
                  Array [
                    Object {
                      "formatter": [Function],
                      "title": "Borrowing Request",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Loan",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Document",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Provider",
                    },
                    Object {
                      "field": "created",
                      "formatter": [Function],
                      "title": "Created on",
                    },
                    Object {
                      "field": "metadata.status",
                      "title": "State",
                    },
                    Object {
                      "field": "metadata.request_date",
                      "formatter": [Function],
                      "title": "Requested on",
                    },
                    Object {
                      "field": "metadata.received_date",
                      "formatter": [Function],
                      "title": "Received on",
                    },
                  ]
                }
                currentPage={1}
                data={
                  Array [
                    Object {
                      "id": 1,
                      "metadata": Object {
                        "document": Object {
                          "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                          "abstract": "This is an abstract",
                          "authors": Array [
                            Object {
                              "full_name": "Jack E. Davis",
                            },
                          ],
                          "document_type": "BOOK",
                          "edition": "1",
                          "keywords": Object {
                            "source": "X",
                            "value": "Patata",
                          },
                          "languages": Array [
                            "en",
                          ],
                          "pid": "docid-1",
                          "publication_year": "1950",
                          "title": "The Gulf: The Making of An American Sea",
                        },
                        "document_pid": "docid-1",
                        "patron_pid": "1",
                        "pid": "illbid-1",
                        "provider": Object {
                          "name": "Library 1",
                          "pid": "ill-provid-1",
                          "type": "LIBRARY",
                        },
                        "provider_pid": "ill-provid-1",
                        "status": "PENDING",
                        "type": "PHYSICAL_COPY",
                      },
                      "pid": "borrowing-request1",
                    },
                    Object {
                      "id": 2,
                      "metadata": Object {
                        "document": Object {
                          "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                          "abstract": "This is an abstract",
                          "authors": Array [
                            Object {
                              "full_name": "Jack E. Davis",
                            },
                          ],
                          "document_type": "BOOK",
                          "edition": "1",
                          "keywords": Object {
                            "source": "X",
                            "value": "Patata",
                          },
                          "languages": Array [
                            "en",
                          ],
                          "pid": "docid-1",
                          "publication_year": "1950",
                          "title": "The Gulf: The Making of An American Sea",
                        },
                        "document_pid": "docid-2",
                        "patron_pid": "2",
                        "pid": "illbid-2",
                        "provider": Object {
                          "name": "Library 2",
                          "pid": "ill-provid-2",
                          "type": "LIBRARY",
                        },
                        "provider_pid": "ill-provid-1",
                        "status": "REQUESTED",
                        "type": "DIGITAL",
                      },
                      "pid": "borrowing-request2",
                    },
                  ]
                }
                fixed={false}
                headerActionComponent={null}
                name="past borrowing requests"
                paginationComponent={null}
                renderEmptyResultsElement={null}
                seeAllComponent={
                  <SeeAllButton
                    disabled={false}
                    fluid={false}
                    to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                  />
                }
                showAllResults={false}
                showMaxRows={5}
                singleLine={true}
                subtitle=""
                title=""
                totalHitsCount={2}
              >
                <Table
                  as="table"
                  compact={true}
                  fixed={false}
                  name="past borrowing requests"
                  selectable={true}
                  singleLine={true}
                  striped={true}
                  subtitle=""
                  title=""
                  unstackable={true}
                >
                  <table
                    className="ui selectable single line striped unstackable compact table"
                    name="past borrowing requests"
                    subtitle=""
                    title=""
                  >
                    <ResultsTableHeader
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Borrowing Request",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Provider",
                          },
                          Object {
                            "field": "created",
                            "formatter": [Function],
                            "title": "Created on",
                          },
                          Object {
                            "field": "metadata.status",
                            "title": "State",
                          },
                          Object {
                            "field": "metadata.request_date",
                            "formatter": [Function],
                            "title": "Requested on",
                          },
                          Object {
                            "field": "metadata.received_date",
                            "formatter": [Function],
                            "title": "Received on",
                          },
                        ]
                      }
                    >
                      <TableHeader
                        as="thead"
                      >
                        <thead
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="header"
                          >
                            <tr
                              className=""
                              data-test="header"
                            >
                              <TableHeaderCell
                                as="th"
                                key="Borrowing Request"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Borrowing Request
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Loan"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Loan
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Document"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Document
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Provider"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Provider
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Created on"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Created on
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="State"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    State
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Requested on"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Requested on
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Received on"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Received on
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                            </tr>
                          </TableRow>
                        </thead>
                      </TableHeader>
                    </ResultsTableHeader>
                    <ResultsTableBody
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Borrowing Request",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Provider",
                          },
                          Object {
                            "field": "created",
                            "formatter": [Function],
                            "title": "Created on",
                          },
                          Object {
                            "field": "metadata.status",
                            "title": "State",
                          },
                          Object {
                            "field": "metadata.request_date",
                            "formatter": [Function],
                            "title": "Requested on",
                          },
                          Object {
                            "field": "metadata.received_date",
                            "formatter": [Function],
                            "title": "Received on",
                          },
                        ]
                      }
                      rows={
                        Array [
                          Object {
                            "id": 1,
                            "metadata": Object {
                              "document": Object {
                                "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                "abstract": "This is an abstract",
                                "authors": Array [
                                  Object {
                                    "full_name": "Jack E. Davis",
                                  },
                                ],
                                "document_type": "BOOK",
                                "edition": "1",
                                "keywords": Object {
                                  "source": "X",
                                  "value": "Patata",
                                },
                                "languages": Array [
                                  "en",
                                ],
                                "pid": "docid-1",
                                "publication_year": "1950",
                                "title": "The Gulf: The Making of An American Sea",
                              },
                              "document_pid": "docid-1",
                              "patron_pid": "1",
                              "pid": "illbid-1",
                              "provider": Object {
                                "name": "Library 1",
                                "pid": "ill-provid-1",
                                "type": "LIBRARY",
                              },
                              "provider_pid": "ill-provid-1",
                              "status": "PENDING",
                              "type": "PHYSICAL_COPY",
                            },
                            "pid": "borrowing-request1",
                          },
                          Object {
                            "id": 2,
                            "metadata": Object {
                              "document": Object {
                                "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                "abstract": "This is an abstract",
                                "authors": Array [
                                  Object {
                                    "full_name": "Jack E. Davis",
                                  },
                                ],
                                "document_type": "BOOK",
                                "edition": "1",
                                "keywords": Object {
                                  "source": "X",
                                  "value": "Patata",
                                },
                                "languages": Array [
                                  "en",
                                ],
                                "pid": "docid-1",
                                "publication_year": "1950",
                                "title": "The Gulf: The Making of An American Sea",
                              },
                              "document_pid": "docid-2",
                              "patron_pid": "2",
                              "pid": "illbid-2",
                              "provider": Object {
                                "name": "Library 2",
                                "pid": "ill-provid-2",
                                "type": "LIBRARY",
                              },
                              "provider_pid": "ill-provid-1",
                              "status": "REQUESTED",
                              "type": "DIGITAL",
                            },
                            "pid": "borrowing-request2",
                          },
                        ]
                      }
                    >
                      <TableBody
                        as="tbody"
                      >
                        <tbody
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="borrowing-request1"
                            key="borrowing-request1"
                          >
                            <tr
                              className=""
                              data-test="borrowing-request1"
                            >
                              <TableCell
                                as="td"
                                data-label="Borrowing Request"
                                data-test="0-borrowing-request1"
                                key="0-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Borrowing Request"
                                  data-test="0-borrowing-request1"
                                >
                                  <Link
                                    data-test="illbid-1"
                                    to="url/illbid-1"
                                  >
                                    <LinkAnchor
                                      data-test="illbid-1"
                                      href="/url/illbid-1"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="illbid-1"
                                        href="/url/illbid-1"
                                        onClick={[Function]}
                                      >
                                        illbid-1
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Loan"
                                data-test="1-borrowing-request1"
                                key="1-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Loan"
                                  data-test="1-borrowing-request1"
                                >
                                  -
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Document"
                                data-test="2-borrowing-request1"
                                key="2-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Document"
                                  data-test="2-borrowing-request1"
                                >
                                  <Link
                                    to="url/docid-1"
                                  >
                                    <LinkAnchor
                                      href="/url/docid-1"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/url/docid-1"
                                        onClick={[Function]}
                                      >
                                        <Overridable(LiteratureTitle)
                                          edition="1"
                                          publicationYear="1950"
                                          title="The Gulf: The Making of An American Sea"
                                        >
                                          <LiteratureTitle
                                            edition="1"
                                            publicationYear="1950"
                                            title="The Gulf: The Making of An American Sea"
                                            truncate={true}
                                            truncateLines={2}
                                            truncateWidth={null}
                                            volume={null}
                                          >
                                            <Truncate
                                              lines={2}
                                              width={null}
                                            >
                                              <span
                                                style={
                                                  Object {
                                                    "WebkitBoxOrient": "vertical",
                                                    "WebkitLineClamp": 2,
                                                    "display": "-webkit-box",
                                                    "overflow": "hidden",
                                                    "textOverflow": "ellipsis",
                                                    "whiteSpace": "normal",
                                                  }
                                                }
                                              >
                                                The Gulf: The Making of An American Sea
                                                 
                                                <EditionYearVolume
                                                  edition="1"
                                                  publicationYear="1950"
                                                  volume={null}
                                                >
                                                  (
                                                  <Overridable(LiteratureEdition)
                                                    edition="1"
                                                  >
                                                    <LiteratureEdition
                                                      edition="1"
                                                      withLabel={false}
                                                    >
                                                      ed. 1
                                                    </LiteratureEdition>
                                                  </Overridable(LiteratureEdition)>
                                                   - 
                                                  1950
                                                  )
                                                </EditionYearVolume>
                                              </span>
                                            </Truncate>
                                          </LiteratureTitle>
                                        </Overridable(LiteratureTitle)>
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Provider"
                                data-test="3-borrowing-request1"
                                key="3-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Provider"
                                  data-test="3-borrowing-request1"
                                >
                                  <Link
                                    to="/backoffice/providers/ill-provid-1"
                                  >
                                    <LinkAnchor
                                      href="/backoffice/providers/ill-provid-1"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/backoffice/providers/ill-provid-1"
                                        onClick={[Function]}
                                      >
                                        Library 1
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Created on"
                                data-test="4-borrowing-request1"
                                key="4-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Created on"
                                  data-test="4-borrowing-request1"
                                />
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="State"
                                data-test="5-borrowing-request1"
                                key="5-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="State"
                                  data-test="5-borrowing-request1"
                                >
                                  PENDING
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Requested on"
                                data-test="6-borrowing-request1"
                                key="6-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Requested on"
                                  data-test="6-borrowing-request1"
                                >
                                   
                                  -
                                   
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Received on"
                                data-test="7-borrowing-request1"
                                key="7-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Received on"
                                  data-test="7-borrowing-request1"
                                >
                                   
                                  -
                                   
                                </td>
                              </TableCell>
                            </tr>
                          </TableRow>
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="borrowing-request2"
                            key="borrowing-request2"
                          >
                            <tr
                              className=""
                              data-test="borrowing-request2"
                            >
                              <TableCell
                                as="td"
                                data-label="Borrowing Request"
                                data-test="0-borrowing-request2"
                                key="0-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="Borrowing Request"
                                  data-test="0-borrowing-request2"
                                >
                                  <Link
                                    data-test="illbid-2"
                                    to="url/illbid-2"
                                  >
                                    <LinkAnchor
                                      data-test="illbid-2"
                                      href="/url/illbid-2"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="illbid-2"
                                        href="/url/illbid-2"
                                        onClick={[Function]}
                                      >
                                        illbid-2
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Loan"
                                data-test="1-borrowing-request2"
                                key="1-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="Loan"
                                  data-test="1-borrowing-request2"
                                >
                                  -
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Document"
                                data-test="2-borrowing-request2"
                                key="2-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="Document"
                                  data-test="2-borrowing-request2"
                                >
                                  <Link
                                    to="url/docid-2"
                                  >
                                    <LinkAnchor
                                      href="/url/docid-2"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/url/docid-2"
                                        onClick={[Function]}
                                      >
                                        <Overridable(LiteratureTitle)
                                          edition="1"
                                          publicationYear="1950"
                                          title="The Gulf: The Making of An American Sea"
                                        >
                                          <LiteratureTitle
                                            edition="1"
                                            publicationYear="1950"
                                            title="The Gulf: The Making of An American Sea"
                                            truncate={true}
                                            truncateLines={2}
                                            truncateWidth={null}
                                            volume={null}
                                          >
                                            <Truncate
                                              lines={2}
                                              width={null}
                                            >
                                              <span
                                                style={
                                                  Object {
                                                    "WebkitBoxOrient": "vertical",
                                                    "WebkitLineClamp": 2,
                                                    "display": "-webkit-box",
                                                    "overflow": "hidden",
                                                    "textOverflow": "ellipsis",
                                                    "whiteSpace": "normal",
                                                  }
                                                }
                                              >
                                                The Gulf: The Making of An American Sea
                                                 
                                                <EditionYearVolume
                                                  edition="1"
                                                  publicationYear="1950"
                                                  volume={null}
                                                >
                                                  (
                                                  <Overridable(LiteratureEdition)
                                                    edition="1"
                                                  >
                                                    <LiteratureEdition
                                                      edition="1"
                                                      withLabel={false}
                                                    >
                                                      ed. 1
                                                    </LiteratureEdition>
                                                  </Overridable(LiteratureEdition)>
                                                   - 
                                                  1950
                                                  )
                                                </EditionYearVolume>
                                              </span>
                                            </Truncate>
                                          </LiteratureTitle>
                                        </Overridable(LiteratureTitle)>
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Provider"
                                data-test="3-borrowing-request2"
                                key="3-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="Provider"
                                  data-test="3-borrowing-request2"
                                >
                                  <Link
                                    to="/backoffice/providers/ill-provid-1"
                                  >
                                    <LinkAnchor
                                      href="/backoffice/providers/ill-provid-1"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/backoffice/providers/ill-provid-1"
                                        onClick={[Function]}
                                      >
                                        Library 2
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Created on"
                                data-test="4-borrowing-request2"
                                key="4-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="Created on"
                                  data-test="4-borrowing-request2"
                                />
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="State"
                                data-test="5-borrowing-request2"
                                key="5-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="State"
                                  data-test="5-borrowing-request2"
                                >
                                  REQUESTED
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Requested on"
                                data-test="6-borrowing-request2"
                                key="6-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="Requested on"
                                  data-test="6-borrowing-request2"
                                >
                                   
                                  -
                                   
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Received on"
                                data-test="7-borrowing-request2"
                                key="7-borrowing-request2"
                              >
                                <td
                                  className=""
                                  data-label="Received on"
                                  data-test="7-borrowing-request2"
                                >
                                   
                                  -
                                   
                                </td>
                              </TableCell>
                            </tr>
                          </TableRow>
                        </tbody>
                      </TableBody>
                    </ResultsTableBody>
                    <ResultsTableFooter
                      allRowsNumber={2}
                      columnsNumber={8}
                      currentPage={1}
                      paginationComponent={null}
                      seeAllComponent={
                        <SeeAllButton
                          disabled={false}
                          fluid={false}
                          to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                        />
                      }
                      showAllResults={false}
                      showMaxRows={5}
                    />
                  </table>
                </Table>
              </ResultsTable>
            </Error>
          </Overridable>
        </Loader>
      </Overridable(Loader)>
    </PatronPastBorrowingRequests>
  </Router>
</BrowserRouter>
`;

exports[`PatronPastBorrowingRequests tests should render show a message with no user borrowing requests 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronPastBorrowingRequests
      data={
        Object {
          "hits": Array [],
          "total": 0,
        }
      }
      error={null}
      fetchPatronPastBorrowingRequests={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      isLoading={false}
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxRequests={5}
    >
      <Overridable(Loader)
        isLoading={false}
      >
        <Loader
          isLoading={false}
        >
          <Overridable
            id="Loader.layout"
            isLoading={false}
          >
            <Error
              FallbackComponent={[Function]}
              boundary={false}
              error={null}
              onUIError={null}
            >
              <ResultsTable
                columns={
                  Array [
                    Object {
                      "formatter": [Function],
                      "title": "Borrowing Request",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Loan",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Document",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Provider",
                    },
                    Object {
                      "field": "created",
                      "formatter": [Function],
                      "title": "Created on",
                    },
                    Object {
                      "field": "metadata.status",
                      "title": "State",
                    },
                    Object {
                      "field": "metadata.request_date",
                      "formatter": [Function],
                      "title": "Requested on",
                    },
                    Object {
                      "field": "metadata.received_date",
                      "formatter": [Function],
                      "title": "Received on",
                    },
                  ]
                }
                currentPage={1}
                data={Array []}
                fixed={false}
                headerActionComponent={null}
                name="past borrowing requests"
                paginationComponent={null}
                renderEmptyResultsElement={null}
                seeAllComponent={
                  <SeeAllButton
                    disabled={false}
                    fluid={false}
                    to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                  />
                }
                showAllResults={false}
                showMaxRows={5}
                singleLine={true}
                subtitle=""
                title=""
                totalHitsCount={0}
              >
                <Message
                  data-test="no-results"
                  icon={true}
                  info={true}
                >
                  <div
                    className="ui icon info message"
                    data-test="no-results"
                  >
                    <MessageContent>
                      <div
                        className="content"
                      >
                        <MessageHeader>
                          <div
                            className="header"
                          >
                            No results found
                          </div>
                        </MessageHeader>
                        There are no 
                        past borrowing requests
                        .
                      </div>
                    </MessageContent>
                  </div>
                </Message>
              </ResultsTable>
            </Error>
          </Overridable>
        </Loader>
      </Overridable(Loader)>
    </PatronPastBorrowingRequests>
  </Router>
</BrowserRouter>
`;

exports[`PatronPastBorrowingRequests tests should render the see all button when showing only a few patron borrowing requests 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <PatronPastBorrowingRequests
      data={
        Object {
          "hits": Array [
            Object {
              "id": 1,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-1",
                "patron_pid": "1",
                "pid": "illbid-1",
                "provider": Object {
                  "name": "Library 1",
                  "pid": "ill-provid-1",
                  "type": "LIBRARY",
                },
                "provider_pid": "ill-provid-1",
                "status": "PENDING",
                "type": "PHYSICAL_COPY",
              },
              "pid": "borrowing-request1",
            },
            Object {
              "id": 2,
              "metadata": Object {
                "document": Object {
                  "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                  "abstract": "This is an abstract",
                  "authors": Array [
                    Object {
                      "full_name": "Jack E. Davis",
                    },
                  ],
                  "document_type": "BOOK",
                  "edition": "1",
                  "keywords": Object {
                    "source": "X",
                    "value": "Patata",
                  },
                  "languages": Array [
                    "en",
                  ],
                  "pid": "docid-1",
                  "publication_year": "1950",
                  "title": "The Gulf: The Making of An American Sea",
                },
                "document_pid": "docid-2",
                "patron_pid": "2",
                "pid": "illbid-2",
                "provider": Object {
                  "name": "Library 2",
                  "pid": "ill-provid-2",
                  "type": "LIBRARY",
                },
                "provider_pid": "ill-provid-1",
                "status": "REQUESTED",
                "type": "DIGITAL",
              },
              "pid": "borrowing-request2",
            },
          ],
          "total": 2,
        }
      }
      error={null}
      fetchPatronPastBorrowingRequests={
        [MockFunction] {
          "calls": Array [
            Array [
              "2",
            ],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        }
      }
      isLoading={false}
      patronDetails={
        Object {
          "user_pid": "2",
        }
      }
      showMaxRequests={1}
    >
      <Overridable(Loader)
        isLoading={false}
      >
        <Loader
          isLoading={false}
        >
          <Overridable
            id="Loader.layout"
            isLoading={false}
          >
            <Error
              FallbackComponent={[Function]}
              boundary={false}
              error={null}
              onUIError={null}
            >
              <ResultsTable
                columns={
                  Array [
                    Object {
                      "formatter": [Function],
                      "title": "Borrowing Request",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Loan",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Document",
                    },
                    Object {
                      "formatter": [Function],
                      "title": "Provider",
                    },
                    Object {
                      "field": "created",
                      "formatter": [Function],
                      "title": "Created on",
                    },
                    Object {
                      "field": "metadata.status",
                      "title": "State",
                    },
                    Object {
                      "field": "metadata.request_date",
                      "formatter": [Function],
                      "title": "Requested on",
                    },
                    Object {
                      "field": "metadata.received_date",
                      "formatter": [Function],
                      "title": "Received on",
                    },
                  ]
                }
                currentPage={1}
                data={
                  Array [
                    Object {
                      "id": 1,
                      "metadata": Object {
                        "document": Object {
                          "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                          "abstract": "This is an abstract",
                          "authors": Array [
                            Object {
                              "full_name": "Jack E. Davis",
                            },
                          ],
                          "document_type": "BOOK",
                          "edition": "1",
                          "keywords": Object {
                            "source": "X",
                            "value": "Patata",
                          },
                          "languages": Array [
                            "en",
                          ],
                          "pid": "docid-1",
                          "publication_year": "1950",
                          "title": "The Gulf: The Making of An American Sea",
                        },
                        "document_pid": "docid-1",
                        "patron_pid": "1",
                        "pid": "illbid-1",
                        "provider": Object {
                          "name": "Library 1",
                          "pid": "ill-provid-1",
                          "type": "LIBRARY",
                        },
                        "provider_pid": "ill-provid-1",
                        "status": "PENDING",
                        "type": "PHYSICAL_COPY",
                      },
                      "pid": "borrowing-request1",
                    },
                    Object {
                      "id": 2,
                      "metadata": Object {
                        "document": Object {
                          "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                          "abstract": "This is an abstract",
                          "authors": Array [
                            Object {
                              "full_name": "Jack E. Davis",
                            },
                          ],
                          "document_type": "BOOK",
                          "edition": "1",
                          "keywords": Object {
                            "source": "X",
                            "value": "Patata",
                          },
                          "languages": Array [
                            "en",
                          ],
                          "pid": "docid-1",
                          "publication_year": "1950",
                          "title": "The Gulf: The Making of An American Sea",
                        },
                        "document_pid": "docid-2",
                        "patron_pid": "2",
                        "pid": "illbid-2",
                        "provider": Object {
                          "name": "Library 2",
                          "pid": "ill-provid-2",
                          "type": "LIBRARY",
                        },
                        "provider_pid": "ill-provid-1",
                        "status": "REQUESTED",
                        "type": "DIGITAL",
                      },
                      "pid": "borrowing-request2",
                    },
                  ]
                }
                fixed={false}
                headerActionComponent={null}
                name="past borrowing requests"
                paginationComponent={null}
                renderEmptyResultsElement={null}
                seeAllComponent={
                  <SeeAllButton
                    disabled={false}
                    fluid={false}
                    to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                  />
                }
                showAllResults={false}
                showMaxRows={1}
                singleLine={true}
                subtitle=""
                title=""
                totalHitsCount={2}
              >
                <Table
                  as="table"
                  compact={true}
                  fixed={false}
                  name="past borrowing requests"
                  selectable={true}
                  singleLine={true}
                  striped={true}
                  subtitle=""
                  title=""
                  unstackable={true}
                >
                  <table
                    className="ui selectable single line striped unstackable compact table"
                    name="past borrowing requests"
                    subtitle=""
                    title=""
                  >
                    <ResultsTableHeader
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Borrowing Request",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Provider",
                          },
                          Object {
                            "field": "created",
                            "formatter": [Function],
                            "title": "Created on",
                          },
                          Object {
                            "field": "metadata.status",
                            "title": "State",
                          },
                          Object {
                            "field": "metadata.request_date",
                            "formatter": [Function],
                            "title": "Requested on",
                          },
                          Object {
                            "field": "metadata.received_date",
                            "formatter": [Function],
                            "title": "Received on",
                          },
                        ]
                      }
                    >
                      <TableHeader
                        as="thead"
                      >
                        <thead
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="header"
                          >
                            <tr
                              className=""
                              data-test="header"
                            >
                              <TableHeaderCell
                                as="th"
                                key="Borrowing Request"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Borrowing Request
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Loan"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Loan
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Document"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Document
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Provider"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Provider
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Created on"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Created on
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="State"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    State
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Requested on"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Requested on
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                              <TableHeaderCell
                                as="th"
                                key="Received on"
                              >
                                <TableCell
                                  as="th"
                                  className=""
                                >
                                  <th
                                    className=""
                                  >
                                    Received on
                                  </th>
                                </TableCell>
                              </TableHeaderCell>
                            </tr>
                          </TableRow>
                        </thead>
                      </TableHeader>
                    </ResultsTableHeader>
                    <ResultsTableBody
                      columns={
                        Array [
                          Object {
                            "formatter": [Function],
                            "title": "Borrowing Request",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Loan",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Document",
                          },
                          Object {
                            "formatter": [Function],
                            "title": "Provider",
                          },
                          Object {
                            "field": "created",
                            "formatter": [Function],
                            "title": "Created on",
                          },
                          Object {
                            "field": "metadata.status",
                            "title": "State",
                          },
                          Object {
                            "field": "metadata.request_date",
                            "formatter": [Function],
                            "title": "Requested on",
                          },
                          Object {
                            "field": "metadata.received_date",
                            "formatter": [Function],
                            "title": "Received on",
                          },
                        ]
                      }
                      rows={
                        Array [
                          Object {
                            "id": 1,
                            "metadata": Object {
                              "document": Object {
                                "$schema": "https://127.0.0.1:5000/schemas/documents/document-v1.0.0.json",
                                "abstract": "This is an abstract",
                                "authors": Array [
                                  Object {
                                    "full_name": "Jack E. Davis",
                                  },
                                ],
                                "document_type": "BOOK",
                                "edition": "1",
                                "keywords": Object {
                                  "source": "X",
                                  "value": "Patata",
                                },
                                "languages": Array [
                                  "en",
                                ],
                                "pid": "docid-1",
                                "publication_year": "1950",
                                "title": "The Gulf: The Making of An American Sea",
                              },
                              "document_pid": "docid-1",
                              "patron_pid": "1",
                              "pid": "illbid-1",
                              "provider": Object {
                                "name": "Library 1",
                                "pid": "ill-provid-1",
                                "type": "LIBRARY",
                              },
                              "provider_pid": "ill-provid-1",
                              "status": "PENDING",
                              "type": "PHYSICAL_COPY",
                            },
                            "pid": "borrowing-request1",
                          },
                        ]
                      }
                    >
                      <TableBody
                        as="tbody"
                      >
                        <tbody
                          className=""
                        >
                          <TableRow
                            as="tr"
                            cellAs="td"
                            data-test="borrowing-request1"
                            key="borrowing-request1"
                          >
                            <tr
                              className=""
                              data-test="borrowing-request1"
                            >
                              <TableCell
                                as="td"
                                data-label="Borrowing Request"
                                data-test="0-borrowing-request1"
                                key="0-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Borrowing Request"
                                  data-test="0-borrowing-request1"
                                >
                                  <Link
                                    data-test="illbid-1"
                                    to="url/illbid-1"
                                  >
                                    <LinkAnchor
                                      data-test="illbid-1"
                                      href="/url/illbid-1"
                                      navigate={[Function]}
                                    >
                                      <a
                                        data-test="illbid-1"
                                        href="/url/illbid-1"
                                        onClick={[Function]}
                                      >
                                        illbid-1
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Loan"
                                data-test="1-borrowing-request1"
                                key="1-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Loan"
                                  data-test="1-borrowing-request1"
                                >
                                  -
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Document"
                                data-test="2-borrowing-request1"
                                key="2-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Document"
                                  data-test="2-borrowing-request1"
                                >
                                  <Link
                                    to="url/docid-1"
                                  >
                                    <LinkAnchor
                                      href="/url/docid-1"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/url/docid-1"
                                        onClick={[Function]}
                                      >
                                        <Overridable(LiteratureTitle)
                                          edition="1"
                                          publicationYear="1950"
                                          title="The Gulf: The Making of An American Sea"
                                        >
                                          <LiteratureTitle
                                            edition="1"
                                            publicationYear="1950"
                                            title="The Gulf: The Making of An American Sea"
                                            truncate={true}
                                            truncateLines={2}
                                            truncateWidth={null}
                                            volume={null}
                                          >
                                            <Truncate
                                              lines={2}
                                              width={null}
                                            >
                                              <span
                                                style={
                                                  Object {
                                                    "WebkitBoxOrient": "vertical",
                                                    "WebkitLineClamp": 2,
                                                    "display": "-webkit-box",
                                                    "overflow": "hidden",
                                                    "textOverflow": "ellipsis",
                                                    "whiteSpace": "normal",
                                                  }
                                                }
                                              >
                                                The Gulf: The Making of An American Sea
                                                 
                                                <EditionYearVolume
                                                  edition="1"
                                                  publicationYear="1950"
                                                  volume={null}
                                                >
                                                  (
                                                  <Overridable(LiteratureEdition)
                                                    edition="1"
                                                  >
                                                    <LiteratureEdition
                                                      edition="1"
                                                      withLabel={false}
                                                    >
                                                      ed. 1
                                                    </LiteratureEdition>
                                                  </Overridable(LiteratureEdition)>
                                                   - 
                                                  1950
                                                  )
                                                </EditionYearVolume>
                                              </span>
                                            </Truncate>
                                          </LiteratureTitle>
                                        </Overridable(LiteratureTitle)>
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Provider"
                                data-test="3-borrowing-request1"
                                key="3-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Provider"
                                  data-test="3-borrowing-request1"
                                >
                                  <Link
                                    to="/backoffice/providers/ill-provid-1"
                                  >
                                    <LinkAnchor
                                      href="/backoffice/providers/ill-provid-1"
                                      navigate={[Function]}
                                    >
                                      <a
                                        href="/backoffice/providers/ill-provid-1"
                                        onClick={[Function]}
                                      >
                                        Library 1
                                      </a>
                                    </LinkAnchor>
                                  </Link>
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Created on"
                                data-test="4-borrowing-request1"
                                key="4-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Created on"
                                  data-test="4-borrowing-request1"
                                />
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="State"
                                data-test="5-borrowing-request1"
                                key="5-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="State"
                                  data-test="5-borrowing-request1"
                                >
                                  PENDING
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Requested on"
                                data-test="6-borrowing-request1"
                                key="6-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Requested on"
                                  data-test="6-borrowing-request1"
                                >
                                   
                                  -
                                   
                                </td>
                              </TableCell>
                              <TableCell
                                as="td"
                                data-label="Received on"
                                data-test="7-borrowing-request1"
                                key="7-borrowing-request1"
                              >
                                <td
                                  className=""
                                  data-label="Received on"
                                  data-test="7-borrowing-request1"
                                >
                                   
                                  -
                                   
                                </td>
                              </TableCell>
                            </tr>
                          </TableRow>
                        </tbody>
                      </TableBody>
                    </ResultsTableBody>
                    <ResultsTableFooter
                      allRowsNumber={2}
                      columnsNumber={8}
                      currentPage={1}
                      paginationComponent={null}
                      seeAllComponent={
                        <SeeAllButton
                          disabled={false}
                          fluid={false}
                          to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                        />
                      }
                      showAllResults={false}
                      showMaxRows={1}
                    >
                      <TableFooter
                        as="tfoot"
                        data-test="footer"
                        fullWidth={true}
                      >
                        <TableHeader
                          as="tfoot"
                          data-test="footer"
                          fullWidth={true}
                        >
                          <tfoot
                            className="full-width"
                            data-test="footer"
                          >
                            <TableRow
                              as="tr"
                              cellAs="td"
                            >
                              <tr
                                className=""
                              >
                                <TableHeaderCell
                                  as="th"
                                  colSpan={9}
                                  textAlign="right"
                                >
                                  <TableCell
                                    as="th"
                                    className=""
                                    colSpan={9}
                                    textAlign="right"
                                  >
                                    <th
                                      className="right aligned"
                                      colSpan={9}
                                    >
                                      <span
                                        className="results-table-compact-summary"
                                      >
                                        Showing entries 
                                        1
                                        -
                                        1
                                         of 
                                        2
                                         
                                      </span>
                                      <span>
                                        <SeeAllButton
                                          disabled={false}
                                          fluid={false}
                                          to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                                        >
                                          <Button
                                            as={
                                              Object {
                                                "$$typeof": Symbol(react.forward_ref),
                                                "displayName": "Link",
                                                "propTypes": Object {
                                                  "innerRef": [Function],
                                                  "onClick": [Function],
                                                  "replace": [Function],
                                                  "target": [Function],
                                                  "to": [Function],
                                                },
                                                "render": [Function],
                                              }
                                            }
                                            disabled={false}
                                            fluid={false}
                                            size="small"
                                            to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                                          >
                                            <Ref
                                              innerRef={
                                                Object {
                                                  "current": <a
                                                    class="ui small button"
                                                    href="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                                                    role="button"
                                                  >
                                                    See all
                                                  </a>,
                                                }
                                              }
                                            >
                                              <RefForward
                                                innerRef={
                                                  Object {
                                                    "current": <a
                                                      class="ui small button"
                                                      href="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                                                      role="button"
                                                    >
                                                      See all
                                                    </a>,
                                                  }
                                                }
                                              >
                                                <Link
                                                  className="ui small button"
                                                  onClick={[Function]}
                                                  role="button"
                                                  to="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                                                >
                                                  <LinkAnchor
                                                    className="ui small button"
                                                    href="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                                                    navigate={[Function]}
                                                    onClick={[Function]}
                                                    role="button"
                                                  >
                                                    <a
                                                      className="ui small button"
                                                      href="/backoffice/ill/borrowing-requests?q=patron_pid:2 AND status:(CANCELLED OR RETURNED)"
                                                      onClick={[Function]}
                                                      role="button"
                                                    >
                                                      See all
                                                    </a>
                                                  </LinkAnchor>
                                                </Link>
                                              </RefForward>
                                            </Ref>
                                          </Button>
                                        </SeeAllButton>
                                      </span>
                                      <span />
                                    </th>
                                  </TableCell>
                                </TableHeaderCell>
                              </tr>
                            </TableRow>
                          </tfoot>
                        </TableHeader>
                      </TableFooter>
                    </ResultsTableFooter>
                  </table>
                </Table>
              </ResultsTable>
            </Error>
          </Overridable>
        </Loader>
      </Overridable(Loader)>
    </PatronPastBorrowingRequests>
  </Router>
</BrowserRouter>
`;
